# pds-view

./: .gitignore  code_of_conduct.md  pyproject.toml
pds_view/: Delegate.py  Model.py  SampleTxt.py  Translate.py  View.py  __init__.py  icons.py  parse_duplicate_ids.py  parser.py  reader.py  searchLabelDialog.py  searchLabelDialog_ui.py  searchTableDialog.py  searchTableDialog_ui.py  translate.py
pds_view/mvc/: sample_gui_app.py  sample_txt_app.py
pds_view/mvc/models/: __init__.py  model.py
pds_view/mvc/view/ui/: main.ui
pds_view/mvc/views/: main_window.py
pds_view/mvc/views/ui/: main.py  main.ui
pds_view/pds/: __init__.py
pds_view/pds/core/: __init__.py  parse_duplicate_ids.py  parser.py  parser_jh.py  reader.py
pds_view/templates/: README.md  inspectTemplate.vm
pds_view/templates/j2/: 0_base.xml.j2  1_identification_area.xml.j2  2_observation_area.xml.j2  4_file_area_observational.xml.j2
pds_view/transform/: __init__.py  image_extractor.py  parser.py  reader.py  translate.py
pds_view/transform/templates/j2/: 0_base.xml.j2  1_identification_area.xml.j2  2_observation_area.xml.j2  4_file_area_observational.xml.j2
